--- a/project_front/package.json
+++ b/project_front/package.json
@@ -21,7 +21,9 @@
     "@auth0/auth0-angular": "^1.8.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
