--- a/project_front/package.json
+++ b/project_front/package.json
@@ -26,7 +26,8 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@microsoft/applicationinsights-web": "~2.4.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
